--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/Users/saifulislam/Library/Android/sdk
-flutter.sdk=/Users/saifulislam/Development/flutter_sdk/flutter
+sdk.dir=/Users/jeffreybunn/Library/Android/sdk
+flutter.sdk=/Users/jeffreybunn/.puro/envs/stable/flutter
