--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   url_launcher: ^6.1.5
   uuid: ^4.2.1
   video_player: ^2.1.6
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   build_runner: ^2.4.6
